Agregué título h1 y subtitulo h3.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Website de Prueba</title>
   </head>
-  <body></body>
+  <body>
+    <h1>
+      Los ornitorrincos desvelan secretos sobre la evolución de los mamíferos
+    </h1>
+    <h3>
+      El análisis genético de los ornitorrincos y los equidnas ha proporcionado
+      a los científicos algunas claves sobre la evolución de los mamíferos.
+      Estas extrañas criaturas son los únicos mamíferos conocidos que ponen
+      huevos y ahora se sabe que cuentan con 10 cromosomas sexuales en lugar de
+      los dos que normalmente tienen el resto de mamíferos, entre ellos los
+      humanos.
+    </h3>
+  </body>
 </html>
