Agregué la imagen del ornito

--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
       los dos que normalmente tienen el resto de mamíferos, entre ellos los
       humanos.
     </h3>
+    <img src="./assets/perryElOrnitorrinco.jpg" alt="Ornitorrinco" />
+    <p></p>
   </body>
 </html>
