Subt bajo la imagen

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       humanos.
     </h3>
     <img src="./assets/perryElOrnitorrinco.jpg" alt="Ornitorrinco" />
+    <h4>
+      El ornitorrinco es una de las criaturas más raras del mundo: aunque es un
+      mamífero, pone huevos; y amamanta a sus crías pero no tienen mamas.
+    </h4>
     <p></p>
   </body>
 </html>
