--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
       El ornitorrinco es una de las criaturas más raras del mundo: aunque es un
       mamífero, pone huevos; y amamanta a sus crías pero no tienen mamas.
     </h4>
-    <p></p>
+    <p>
+      El ornitorrinco, una especie endémica de Australia occidental y de la isla
+      de Tasmania parecido a un castor y dotado de un pico de pato, exhibe una
+      variedad de características extrañas: pone huevos en lugar de dar a luz
+      crías vivas, produce leche y tiene unos espolones venenosos, además de
+      muchos más cromosomas sexuales que los demás mamíferos. Por algo es
+      considerado uno de los animales más extraños del mundo. Ahora, un equipo
+      internacional de investigadores dirigido por la Universidad de Copenhague
+      ha realizado un exhaustivo análisis del genoma de esta extraña criatura y
+      de sus primos hermanos: los equidnas. Sus conclusiones, publicadas
+      recientemente en la revista Nature, aportan nuevos datos sobre esta
+      criatura y su evolución.
+    </p>
   </body>
 </html>
