style first-letter de color verde.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       *:hover {
         color: green;
       }
+      *::first-letter {
+        color: green;
+      }
       #otra-capa + h3 {
         color: green;
       }
