Agregué pseudoelementos de CSS before y after.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       *::first-letter {
         color: green;
       }
+      *::before {
+        content: "🦆";
+      }
+      *::after {
+        content: "🦫";
+      }
       #otra-capa + h3 {
         color: green;
       }
