Cambio de color a las letras de *

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Website de Prueba</title>
     <style>
       * {
-        color: black;
+        color: orange;
       }
       *:hover {
         color: green;
