Agregué emojis antes y después del título

--- a/index.html
+++ b/index.html
@@ -7,25 +7,28 @@
     <title>Website de Prueba</title>
     <style>
       * {
-        color: orange;
+        background-color: papayawhip;
+      }
+      * {
+        color: green;
       }
       *:hover {
-        color: green;
+        color: black;
       }
       *::first-letter {
         color: green;
       }
-      *::before {
+      h1::before {
         content: "🦆";
       }
-      *::after {
+      h1::after {
         content: "🦫";
       }
       #otra-capa + h3 {
-        color: green;
+        color: black;
       }
       #otra-capa + h3:hover {
-        color: black;
+        color: green;
       }
     </style>
   </head>
